--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Next.js
+.next/
+ducsu-voter-system/.next/
+out/
+
 # Python
 __pycache__/
 *.py[cod]
