Simplify deployment - remove database dependency for initial deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,3 @@
 {
-  "rootDirectory": "ducsu-voter-system",
-  "buildCommand": "cd ducsu-voter-system && npm run build",
-  "outputDirectory": "ducsu-voter-system/.next",
-  "installCommand": "cd ducsu-voter-system && npm install",
-  "framework": "nextjs"
+  "rootDirectory": "ducsu-voter-system"
 }
